src/objects/cec_Alert_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Type_Image__c</fullName>
        <formula>IF( ISPICKVAL(Type__c, &apos;Safety&apos;),IMAGE(&quot;/resource/CEC_Safety_alert&quot;, &quot;Safety&quot;, 30, 30), IMAGE(&quot;/resource/CEC_Quality_alert&quot;, &quot;Quality&quot;, 30, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC</description>
        <inlineHelpText>When selected, the rule will apply to all markets regardless of the Market field</inlineHelpText>
        <label>All Markets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC - The lookup field to the CEC Products</description>
        <label>Case Product</label>
        <referenceTo>mdm_Case_Product__c</referenceTo>
        <relationshipLabel>Alert Rule</relationshipLabel>
        <relationshipName>Alert_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consumer_Product_Descriptor_no_size__c</fullName>
        <description>CEC - Product Description without Size details</description>
        <formula>Case_Product__r.Consumer_Product_Descriptor_no_size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer Product Descriptor (no size)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_By_Day_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC</description>
        <inlineHelpText>When selected, cases must have a Production Code/Daycode added in order to be tracked.</inlineHelpText>
        <label>Group By Day Code?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L0_Product_Category__c</fullName>
        <formula>IF(VALUE(TEXT(Product_Level__c)) &gt;= 0, Product_Category__r.L0_Product_Category__c, null)</formula>
        <label>L0 Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1_Product_Category__c</fullName>
        <formula>IF(VALUE(TEXT(Product_Level__c))&gt;=1 , Product_Category__r.L1_Product_Category__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L1 Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1_Reason_Code__c</fullName>
        <formula>IF(VALUE(TEXT(Reason_Level__c))&gt;=1, Reason_Code__r.Global_Listening_Tree__r.L1_Desc__c  , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L1 Reason Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Product_Category__c</fullName>
        <formula>IF(VALUE(TEXT(Product_Level__c))&gt;=2, Product_Category__r.L2_Product_Category__c, null)</formula>
        <label>L2 Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Reason_Code__c</fullName>
        <description>CEC : Reason Code for Level 2</description>
        <formula>IF(VALUE(TEXT(Reason_Level__c))&gt;=2, Reason_Code__r.Global_Listening_Tree__r.L2_Desc__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2 Reason Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L3_Reason_Code__c</fullName>
        <formula>IF(VALUE(TEXT(Reason_Level__c))&gt;=3 , Reason_Code__r.Global_Listening_Tree__r.L3_Desc__c  , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L3 Reason Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Cone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sri Lanka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnam</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category_Concat_Value__c</fullName>
        <description>CEC : To concatenate all the Product Category Level values. To be used in SOQL query</description>
        <formula>L0_Product_Category__c +  L1_Product_Category__c +  L2_Product_Category__c +  L3_Product_Category__c +  L4_Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category Concat Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>mdm_Product_Category__c</referenceTo>
        <relationshipLabel>Alert Rule</relationshipLabel>
        <relationshipName>Alert_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Level__c</fullName>
        <description>CEC</description>
        <inlineHelpText>After selecting a product category, this field determines what level to use for matching.</inlineHelpText>
        <label>Product Level</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonCode_Concat_Value__c</fullName>
        <description>CEC : To concatenate all the Reason Code Level values. To be used in SOQL query</description>
        <formula>L1_Reason_Code__c  +  L2_Reason_Code__c + L3_Reason_Code__c + L4_Reason_Code__c + L5_Reason_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReasonCode Concat Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason Code</label>
        <referenceTo>mdm_Reason_Code__c</referenceTo>
        <relationshipLabel>Alert Rule</relationshipLabel>
        <relationshipName>Alert_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Level__c</fullName>
        <description>CEC</description>
        <inlineHelpText>After selecting a reason code, this field determines what level to use for matching.</inlineHelpText>
        <label>Reason Level</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <description>CEC</description>
        <inlineHelpText>When the count of matching records is equal to or greater than this value, the alert actions associated to this rule will be triggered.</inlineHelpText>
        <label>Threshold</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X30_Days_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC : This checkbox will be used to filter Alert Tracker Items based on the  Roll-up summary field on the Alert tracker</description>
        <label>30 Days Limit</label>
        <type>Checkbox</type>
    </fields>
    <label>Alert Rule</label>
    <listViews>
        <fullName>Alert_Ansicht_Test</fullName>
        <columns>NAME</columns>
        <columns>L5_Reason_Code__c</columns>
        <columns>L5_Product_Category__c</columns>
        <columns>Threshold__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>DACH</value>
        </filters>
        <label>Alert Ansicht Test</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>All_Alert_Rules1</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>L5_Reason_Code__c</columns>
        <columns>L0_Product_Category__c</columns>
        <columns>L2_Product_Category__c</columns>
        <columns>Market__c</columns>
        <columns>Threshold__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Alert Rules</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Alert_Rules2</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>L5_Reason_Code__c</columns>
        <columns>L0_Product_Category__c</columns>
        <columns>L2_Product_Category__c</columns>
        <columns>Market__c</columns>
        <columns>Threshold__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Alert Rules</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CEC_Baltics_Queue_cec_Alert_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Baltics Queue</label>
        <queue>CEC_Baltics_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Benelux_Queue_cec_Alert_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Benelux Queue</label>
        <queue>CEC_Benelux_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Brazil_Queue_cec_Alert_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Brazil Queue</label>
        <queue>CEC_Brazil_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Cyprus_Queue_cec_Alert_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Cyprus Queue</label>
        <queue>CEC_Cyprus_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Czech_Republic_Queue_cec_Alert_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Czech Republic Queue</label>
        <queue>CEC_Czech_Republic_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_DACH_Queue_cec_Alert_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC DACH Queue</label>
        <queue>CEC_DACH_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_France_Queue_cec_Alert_Rule</fullName>
        <filterScope>Mine</filterScope>
        <label>CEC France Queue</label>
        <language>fr</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_General_Queue_cec_Alert_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC UKI Queue</label>
        <queue>CEC_General_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Greece_Queue_cec_Alert_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Greece Queue</label>
        <queue>CEC_Greece_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Hungary_Queue_cec_Alert_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Hungary Queue</label>
        <queue>CEC_Hungary_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_India_Tier_1_cec_Alert_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC India Tier 1</label>
        <queue>CEC_India_Tier_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Italy_Queue_cec_Alert_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Italy Queue</label>
        <queue>CEC_Italy_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Alert Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alert Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>L0_Product_Category_Mandatory_Validation</fullName>
        <active>false</active>
        <description>Please verify that the Product Category&apos;s &apos;Division Name&apos; is not null if Type is &apos;Safety&apos;</description>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;Safety&apos;) &amp;&amp; (Product_Category__c != null  &amp;&amp; L0_Product_Category__c = null)</errorConditionFormula>
        <errorMessage>Please make sure that  the Product Category&apos;s  &apos;Division Name&apos; is not null for &apos;Safety&apos; alerts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2_Product_Category_Mandatory_Validation</fullName>
        <active>false</active>
        <description>This validation rule is to verify if the L2 Product Category is mandatory if the type is &apos;Quality&apos;</description>
        <errorConditionFormula>L2_Product_Category__c = null &amp;&amp; ISPICKVAL(Type__c,&apos;Quality&apos;)</errorConditionFormula>
        <errorMessage>Please make sure that the Product Category&apos;s &apos;Category Name&apos; is not null for &apos;Quality&apos; alerts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L5_ReasonCode_Mandatory_Validation</fullName>
        <active>true</active>
        <description>This validation is triggered if the &quot;L5_Code&quot; value of the Reason_Code lookup is null  and if the Reason_Level is  5, or If the Reason_Level is not  5</description>
        <errorConditionFormula>AND(L5_Reason_Code__c = null,OR(ISPICKVAL(Type__c,  &quot;Quality&quot;),ISPICKVAL(Type__c,&quot;Safety&quot;)))</errorConditionFormula>
        <errorMessage>Please check the following :-
 Whether the Reason level is 5,  
 If Reason code is not empty and its Global Listening Tree&apos;s &apos;L5 Code&apos;    value is not empty and
 select the value on Type field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Market_And_Global_Flag_Validation</fullName>
        <active>true</active>
        <description>Market_And_Global_Flag_Validation</description>
        <errorConditionFormula>AND( TEXT(Market__c)= null,  All_Market__c = false)</errorConditionFormula>
        <errorMessage>Please specify the Market or Check All Market field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Mandatory_Alert_Validation</fullName>
        <active>true</active>
        <description>CEC :  Only one of the Case Product or Product Category should be mandatory</description>
        <errorConditionFormula>(Case_Product__c = null &amp;&amp;  Product_Category__c = null) ||
(Case_Product__c != null &amp;&amp;  Product_Category__c != null)</errorConditionFormula>
        <errorMessage>Only one of  &apos;Product Category&apos; or &apos;Case Product&apos; value is allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QualityAlert_Product_Category_Validation</fullName>
        <active>true</active>
        <description>CEC : Validation for Quality Alert Types to check Product Category values are available,</description>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;Quality&apos;) &amp;&amp; 
( Case_Product__c = null &amp;&amp;
  Product_Category__c != null &amp;&amp;
   (
        ISPICKVAL(Product_Level__c,&apos;&apos;) ||
	(ISPICKVAL(Product_Level__c,&apos;2&apos;) &amp;&amp; 
        L2_Product_Category__c = null) ||
        (ISPICKVAL(Product_Level__c,&apos;4&apos;) &amp;&amp; 
	L4_Product_Category__c = null)
    )
)</errorConditionFormula>
        <errorMessage>Please verify the Product Level and its corresponding Product Category value : &apos;Category Name(L2)&apos; or  &apos;Sector Name(L4)&apos; is populated and not null for the type &apos;Quality&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SafetyAlert_Product_Category_Validation</fullName>
        <active>true</active>
        <description>CEC : Validation for Safety Alert Types to check Product Category values are available,</description>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;Safety&apos;) &amp;&amp; 
( Case_Product__c = null &amp;&amp;
  Product_Category__c != null &amp;&amp;
   (
        ISPICKVAL(Product_Level__c,&apos;&apos;) ||
	(ISPICKVAL(Product_Level__c,&apos;0&apos;) &amp;&amp; 
        L0_Product_Category__c = null) ||
        (ISPICKVAL(Product_Level__c,&apos;4&apos;) &amp;&amp; 
	L4_Product_Category__c = null)
    )
)</errorConditionFormula>
        <errorMessage>Please verify the Product Level and its corresponding Product Category value : &apos;Division Name(L0)&apos; or &apos;Sector Name(L4)&apos; is populated and not null for the type &apos;Safety&apos;.</errorMessage>
    </validationRules>
</CustomObject>